src/parser/snapshots/rbx_rsml__parser__tests__tween_math_numeric_time.snap
---
source: src/parser/mod.rs
assertion_line: 426
expression: parsed.ast
---
[
    Tween {
        declaration: Node {
            token: SpannedToken(
                0,
                TweenDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    7,
                    Identifier(
                        "Slide",
                    ),
                    12,
                ),
                leading_trivia: None,
            },
        ),
        body: Some(
            Table {
                body: Delimited {
                    left: Node {
                        token: SpannedToken(
                            13,
                            ParensOpen,
                            14,
                        ),
                        leading_trivia: None,
                    },
                    content: Some(
                        [
                            MathOperation {
                                left: Node {
                                    node: Node {
                                        token: SpannedToken(
                                            14,
                                            Number(
                                                "0.5",
                                            ),
                                            17,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                                operators: [
                                    Node {
                                        token: SpannedToken(
                                            18,
                                            OpAdd,
                                            19,
                                        ),
                                        leading_trivia: None,
                                    },
                                ],
                                right: Some(
                                    Node {
                                        node: Node {
                                            token: SpannedToken(
                                                20,
                                                Number(
                                                    "0.1",
                                                ),
                                                23,
                                            ),
                                            leading_trivia: None,
                                        },
                                    },
                                ),
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        23,
                                        Comma,
                                        24,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        25,
                                        StateSelectorOrEnumPart(
                                            Some(
                                                "Quad",
                                            ),
                                        ),
                                        30,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        30,
                                        Comma,
                                        31,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        32,
                                        StateSelectorOrEnumPart(
                                            Some(
                                                "Out",
                                            ),
                                        ),
                                        36,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                        ],
                    ),
                    right: Some(
                        Node {
                            token: SpannedToken(
                                36,
                                ParensClose,
                                37,
                            ),
                            leading_trivia: None,
                        },
                    ),
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    37,
                    SemiColon,
                    38,
                ),
                leading_trivia: None,
            },
        ),
    },
]
