src/parser/snapshots/rbx_rsml__parser__tests__tween_negative_repeat_count.snap
---
source: src/parser/mod.rs
assertion_line: 424
expression: parsed.ast
---
[
    Tween {
        declaration: Node {
            token: SpannedToken(
                0,
                TweenDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    7,
                    Identifier(
                        "Slide",
                    ),
                    12,
                ),
                leading_trivia: None,
            },
        ),
        body: Some(
            Table {
                body: Delimited {
                    left: Node {
                        token: SpannedToken(
                            13,
                            ParensOpen,
                            14,
                        ),
                        leading_trivia: None,
                    },
                    content: Some(
                        [
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        14,
                                        Number(
                                            "0.5",
                                        ),
                                        17,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        17,
                                        Comma,
                                        18,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        19,
                                        StateSelectorOrEnumPart(
                                            Some(
                                                "Quad",
                                            ),
                                        ),
                                        24,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        24,
                                        Comma,
                                        25,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        26,
                                        StateSelectorOrEnumPart(
                                            Some(
                                                "Out",
                                            ),
                                        ),
                                        30,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        30,
                                        Comma,
                                        31,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            UnaryMinus {
                                operator: Node {
                                    token: SpannedToken(
                                        32,
                                        OpSub,
                                        33,
                                    ),
                                    leading_trivia: None,
                                },
                                operand: Node {
                                    node: Node {
                                        token: SpannedToken(
                                            33,
                                            Number(
                                                "1",
                                            ),
                                            34,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                            },
                        ],
                    ),
                    right: Some(
                        Node {
                            token: SpannedToken(
                                34,
                                ParensClose,
                                35,
                            ),
                            leading_trivia: None,
                        },
                    ),
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    35,
                    SemiColon,
                    36,
                ),
                leading_trivia: None,
            },
        ),
    },
]
